--- a/src/main/webapp/views/logged/home.view.html
+++ b/src/main/webapp/views/logged/home.view.html
@@ -101,16 +101,8 @@
     </div> 
   </div> 
   <hr class="col-md-12 col-lg-12 col-sm-12 col-xs-12"> 
-  <h1 class="component-holder h3 text-left col-md-12 col-lg-12 col-sm-12 col-xs-12" xattr-position="text-left" xattr-type="h3" data-component="crn-text-component" id="crn-text-component-576117">Avaliação</h1> 
-  <div class="component-holder col-md-12 col-lg-12 col-sm-12 col-xs-12 text-primary" xattr-theme="text-primary" data-component="crn-rating" id="crn-rating-462758"> 
-    <cronapp-rating ng-model="vars.evaluation9451" icon-off="fa fa-star-o" xattr-default-value=""> 
-      <i style="font-size: 200%" class="component-holder fa fa-star"></i> 
-      <i style="font-size: 200%" class="component-holder fa fa-star"></i> 
-      <i style="font-size: 200%" class="component-holder fa fa-star"></i> 
-      <i style="font-size: 200%" class="component-holder fa fa-star"></i> 
-      <i style="font-size: 200%" class="component-holder fa fa-star"></i> 
-    </cronapp-rating> 
-  </div> 
+  <h1 class="component-holder h3 text-left col-md-12 col-lg-12 col-sm-12 col-xs-12" xattr-position="text-left" xattr-type="h3" data-component="crn-text-component" id="crn-text-component-576117">Avaliação</h1><div class="text-primary col-md-12 col-lg-12 col-sm-12 col-xs-12" xattr-theme="text-primary" data-component="crn-rating" id="crn-rating-239546"><cronapp-rating ng-model="vars.evaluation6421" icon-off="fa fa-star-o" xattr-default-value=""><i style="font-size: 200%" class="component-holder fa fa-star"></i> <i style="font-size: 200%" class="component-holder fa fa-star"></i> <i style="font-size: 200%" class="component-holder fa fa-star"></i> <i style="font-size: 200%" class="component-holder fa fa-star"></i> <i style="font-size: 200%" class="fa fa-star classe"></i></cronapp-rating></div> 
+   
   <hr class="col-md-12 col-lg-12 col-sm-12 col-xs-12"> 
   <h1 class="component-holder h3 text-left col-md-12 col-lg-12 col-sm-12 col-xs-12" xattr-position="text-left" xattr-type="h3" data-component="crn-text-component" id="crn-text-component-87311">Lista de opção</h1> 
   <div class="component-holder col-md-12 col-lg-12 col-sm-12 col-xs-12" ng-model="vars.radio7517" data-component="crn-radiogroup" id="crn-radiogroup-72327"> 
